# arc

./: CMakeLists.txt  CONTRIBUTING.md  README.md
benches/: CMakeLists.txt  regalloc.cpp
cmake/: arc.dev.cmake  arc.utils.cmake  config.cmake.in
docs/: operand-convention.md
docs/ir/: operand-convention.md  semantic-convention.md
include/arc/aarch64/: instructions.hpp
include/arc/analysis/: call-graph.hpp  tbaa.hpp
include/arc/codegen/: insn-selector.hpp  instruction.hpp  lowering.hpp  regalloc.hpp  selection-dag.hpp
include/arc/foundation/: builder.hpp  module.hpp  node.hpp  pass-manager.hpp  pass.hpp  region.hpp  taskgraph.hpp  typed-data.hpp
include/arc/support/: algorithm.hpp  allocator.hpp  dump.hpp  inference.hpp  instruction.hpp  slice.hpp  string-table.hpp
include/arc/transform/: constfold.hpp  cse.hpp  dce.hpp  dse.hpp  hoistexpr.hpp  inliner.hpp  mem2reg.hpp  sroa.hpp
lib/: CMakeLists.txt
lib/aarch64/: CMakeLists.txt  pcs.cpp
lib/analysis/: CMakeLists.txt  call-graph.cpp  tbaa.cpp
lib/codegen/: CMakeLists.txt  lowering.cpp
lib/foundation/: CMakeLists.txt  builder.cpp  module.cpp  pass-manager.cpp  region.cpp  taskgraph.cpp  typed-data.cpp
lib/support/: CMakeLists.txt  algorithm.cpp  dump.cpp  inference.cpp  string-table.cpp
lib/transform/: CMakeLists.txt  constfold.cpp  cse.cpp  dce.cpp  dse.cpp  hoistexpr.cpp  inliner.cpp  mem2reg.cpp  sroa.cpp
tests/: CMakeLists.txt
tests/analysis/: CMakeLists.txt  call-graph.cpp  tbaa.cpp
tests/codegen/: CMakeLists.txt  insn-selector.cpp  lowering.cpp  regalloc.cpp  selection-dag.cpp
tests/foundation/: CMakeLists.txt  builder.cpp  module.cpp  node.cpp  pass-manager.cpp  region.cpp  typed-data.cpp
tests/support/: CMakeLists.txt  allocator.cpp  dump.cpp  inference.cpp  slice.cpp  string-table.cpp
tests/transform/: CMakeLists.txt  constfold.cpp  cse.cpp  dce.cpp  dse.cpp  hoistexpr.cpp  inliner.cpp  mem2reg.cpp  sroa.cpp
